# llm_plus_scoring_synthetic_gen

./: .gitignore  README.md  pyproject.toml  requirements.txt
Notebook/: agnews_eps3_experiment_report.md  demo.ipynb
docs/notes/: final_cleanup_architecture_note.md  final_cleanup_migration_report.md  phase2_architecture_note.md  phase2_migration_report.md  phase35_privacy_architecture_note.md  phase35_privacy_migration_report.md  phase35b_privacy_patch_note.md  phase35b_privacy_patch_report.md  phase3_architecture_note.md  phase3_migration_report.md  phase4_architecture_note.md  phase4_migration_report.md  phase5_architecture_note.md  phase5_migration_report.md  privacy_architecture_planning_report.md  refactor_phase1_report.md  repo_audit_report.md
paper/reports/: agnews_eps3.0_s255_20260404_194803.jsonl
scripts/: evaluate_downstream.py  run_experiment.py  sweep_hyperparams.py
scripts/local_scripts/: install_amazon.sh  install_pace.sh
src/: __init__.py  clip_utils.py  config.py  evaluate.py  generate.py  privacy_accounting.py  sparse_vector.py
src/artifacts/: __init__.py  jsonl_writer.py  metadata.py  resume.py  simple_jsonl.py
src/backends/: __init__.py  base.py  huggingface_causal_lm.py
src/batching/: __init__.py  base.py  hash_label_policy.py
src/datasets/: __init__.py  base.py  registry.py  text_classification.py
src/evaluation/: __init__.py  data.py  finetune.py  icl.py  results.py
src/mechanisms/: __init__.py  base.py  private_prediction.py
src/privacy/: __init__.py  bounds.py  conversions.py  events.py  planning.py  reporting.py
src/privacy/accountants/: __init__.py  base.py  zcdp.py
src/privacy/analyses/: __init__.py  private_prediction.py
src/prompts/: __init__.py  base.py  text_classification.py
src/runtime/: __init__.py  generation.py  stats.py
tests/: conftest.py  test_accounting.py  test_artifacts.py  test_backends.py  test_batching.py  test_batching_policy.py  test_clip_utils.py  test_dataset_adapter.py  test_evaluation.py  test_imports.py  test_jsonl_schema.py  test_mechanism.py  test_privacy_layer.py  test_prompt_builder.py  test_runtime.py  test_sparse_vector.py
