[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "private-prediction-synth"
version = "0.2.0"
description = "Private prediction synthetic text generation (Amin et al. 2024)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "datasets",
    "accelerate",
    "huggingface_hub",
    "dp-accounting>=0.4.0",
    "numpy",
    "scipy",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

# ---------------------------------------------------------------------------
# Package discovery
# ---------------------------------------------------------------------------
# The source lives in src/ which already contains __init__.py.
# Declaring it explicitly avoids inadvertently picking up other directories
# (scripts/, tests/, paper/) when the package is installed.
[tool.setuptools]
packages = ["src"]

# ---------------------------------------------------------------------------
# Pytest configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
# -p no:warnings keeps test output readable during Phase 1
addopts = "-p no:warnings -v"
